CUDA 4V100 Optimal/Log/REA supercomputing 4096 not MPI/compilation_logs/compile_size_688128_block_4096_20251228_071404.txt
========== COMPILATION START ==========
Parameters: PARAMETR_SIZE=688128, ANT_SIZE=4096
Compile command: nvcc -O3 -arch=sm_70 -std=c++17 -o aco_cuda_optimized.exe aco_cuda_global_while.cu -Xcompiler "-O2 -ffast-math -fopenmp" -use_fast_math -lcudart -Xptxas "-O3,-v,-maxrregcount=32" --resource-usage

In file included from aco_cuda_global_while.cu:9:
parametrs.h:75: warning: "M_PI" redefined
   75 | #define M_PI 3.1415926535897932384626433832795028841971
      | 
In file included from /opt/gcc/v9.1/include/c++/9.1.0/cmath:45,
                 from /opt/gcc/v9.1/include/c++/9.1.0/math.h:36,
                 from /opt/cuda/v12.1/include/crt/math_functions.h:10547,
                 from /opt/cuda/v12.1/include/crt/common_functions.h:303,
                 from /opt/cuda/v12.1/include/cuda_runtime.h:118,
                 from <command-line>:
/usr/include/math.h:359: note: this is the location of the previous definition
  359 | # define M_PI  3.14159265358979323846 /* pi */
      | 
In file included from aco_cuda_global_while.cu:9:
parametrs.h:76: warning: "M_E" redefined
   76 | #define M_E 2.7182818284590452353602874713526624977572
      | 
In file included from /opt/gcc/v9.1/include/c++/9.1.0/cmath:45,
                 from /opt/gcc/v9.1/include/c++/9.1.0/math.h:36,
                 from /opt/cuda/v12.1/include/crt/math_functions.h:10547,
                 from /opt/cuda/v12.1/include/crt/common_functions.h:303,
                 from /opt/cuda/v12.1/include/cuda_runtime.h:118,
                 from <command-line>:
/usr/include/math.h:354: note: this is the location of the previous definition
  354 | # define M_E  2.7182818284590452354 /* e */
      | 
aco_cuda_global_while.cu(290): warning #68-D: integer conversion resulted in a change of sign
          hashTable[i].key = -1;
                             ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

aco_cuda_global_while.cu(1543): warning #61-D: integer operation result is out of range
      const size_t ant_matrix_size = 688128 * 4096 * sizeof(int);
                                            ^

aco_cuda_global_while.cu(1543): warning #68-D: integer conversion resulted in a change of sign
      const size_t ant_matrix_size = 688128 * 4096 * sizeof(int);
                                     ^

aco_cuda_global_while.cu(1547): warning #61-D: integer operation result is out of range
      do { cudaError_t err = cudaMallocAsync(&dev_agent_params, 688128 * 4096 * sizeof(double), compute_stream); if (err != cudaSuccess) { std::cerr << "CUDA error " << "aco_cuda_global_while.cu" << ":" << 1547 << " " << cudaGetErrorString(err) << std::endl; exit(
                                                                       ^

aco_cuda_global_while.cu(1547): warning #68-D: integer conversion resulted in a change of sign
      do { cudaError_t err = cudaMallocAsync(&dev_agent_params, 688128 * 4096 * sizeof(double), compute_stream); if (err != cudaSuccess) { std::cerr << "CUDA error " << "aco_cuda_global_while.cu" << ":" << 1547 << " " << cudaGetErrorString(err) << std::endl; exit(
                                                                ^

aco_cuda_global_while.cu(1709): warning #61-D: integer operation result is out of range
      size_t total_data_transferred = (5 * 688128 * sizeof(double)) * 3 * num_iterations + (688128 * 4096 * sizeof(int)) * num_iterations + (4096 * sizeof(double)) * num_iterations;
                                                                                                   ^

aco_cuda_global_while.cu(1709): warning #68-D: integer conversion resulted in a change of sign
      size_t total_data_transferred = (5 * 688128 * sizeof(double)) * 3 * num_iterations + (688128 * 4096 * sizeof(int)) * num_iterations + (4096 * sizeof(double)) * num_iterations;
                                                                                            ^

aco_cuda_global_while.cu(1744): warning #61-D: integer operation result is out of range
      int* ant_parametr = new int[688128 * 4096];
                                         ^

aco_cuda_global_while.cu(1744): error: the size of an array in "new" must be non-negative
      int* ant_parametr = new int[688128 * 4096];
                                  ^

aco_cuda_global_while.cu(1846): warning #61-D: integer operation result is out of range
      size_t total_data_transferred = (5 * 688128 * sizeof(double)) * 3 * num_iterations + (688128 * 4096 * sizeof(int)) * num_iterations + (4096 * sizeof(double)) * num_iterations;
                                                                                                   ^

aco_cuda_global_while.cu(1846): warning #68-D: integer conversion resulted in a change of sign
      size_t total_data_transferred = (5 * 688128 * sizeof(double)) * 3 * num_iterations + (688128 * 4096 * sizeof(int)) * num_iterations + (4096 * sizeof(double)) * num_iterations;
                                                                                            ^

aco_cuda_global_while.cu(1875): warning #61-D: integer operation result is out of range
      int* ant_parametr = new int[688128 * 4096];
                                         ^

aco_cuda_global_while.cu(1875): error: the size of an array in "new" must be non-negative
      int* ant_parametr = new int[688128 * 4096];
                                  ^

aco_cuda_global_while.cu(1884): warning #61-D: integer operation result is out of range
      do { cudaError_t err = cudaMemcpy(dev_agent_node, ant_parametr, 688128 * 4096 * sizeof(int), cudaMemcpyHostToDevice); if (err != cudaSuccess) { std::cerr << "CUDA error " << "aco_cuda_global_while.cu" << ":" << 1884 << " " << cudaGetErrorString(err) << std::endl; exit(
                                                                             ^

aco_cuda_global_while.cu(1884): warning #68-D: integer conversion resulted in a change of sign
      do { cudaError_t err = cudaMemcpy(dev_agent_node, ant_parametr, 688128 * 4096 * sizeof(int), cudaMemcpyHostToDevice); if (err != cudaSuccess) { std::cerr << "CUDA error " << "aco_cuda_global_while.cu" << ":" << 1884 << " " << cudaGetErrorString(err) << std::endl; exit(
                                                                      ^

aco_cuda_global_while.cu(1953): warning #61-D: integer operation result is out of range
          (688128 * 4096 * sizeof(int)) * num_iterations +
                  ^

aco_cuda_global_while.cu(1953): warning #68-D: integer conversion resulted in a change of sign
          (688128 * 4096 * sizeof(int)) * num_iterations +
           ^

aco_cuda_global_while.cu(2047): warning #61-D: integer operation result is out of range
          (688128 * 4096 * sizeof(int)) * num_iterations +
                  ^

aco_cuda_global_while.cu(2047): warning #68-D: integer conversion resulted in a change of sign
          (688128 * 4096 * sizeof(int)) * num_iterations +
           ^

aco_cuda_global_while.cu(2104): warning #61-D: integer operation result is out of range
      total_memory += 688128 * 4096 * sizeof(int);
                             ^

aco_cuda_global_while.cu(2104): warning #68-D: integer conversion resulted in a change of sign
      total_memory += 688128 * 4096 * sizeof(int);
                      ^

aco_cuda_global_while.cu(2113): warning #61-D: integer operation result is out of range
      total_memory += 688128 * 4096 * sizeof(double);
                             ^

aco_cuda_global_while.cu(2113): warning #68-D: integer conversion resulted in a change of sign
      total_memory += 688128 * 4096 * sizeof(double);
                      ^

aco_cuda_global_while.cu(2352): warning #61-D: integer operation result is out of range
      std::cout << "  Total agent nodes: " << 4096 * 688128 << std::endl;
                                                   ^

aco_cuda_global_while.cu(2356): warning #61-D: integer operation result is out of range
      size_t expected_agent_size = 4096 * 688128 * sizeof(int);
                                        ^

aco_cuda_global_while.cu(2356): warning #68-D: integer conversion resulted in a change of sign
      size_t expected_agent_size = 4096 * 688128 * sizeof(int);
                                   ^

2 errors detected in the compilation of "aco_cuda_global_while.cu".
========== COMPILATION END ==========
Exit code: 2
